[package]
name = "vqf"
description = "Implementation of the Versatile Quaternion-based Filter (VQF) algorithm for sensor fusion."
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
# enable clippy lints with priority -1
# so that we can override certain ones with "allow"
all = { level = "warn", priority = -1 }
inline_always = "allow"
pedantic = { level = "warn", priority = -1 }

# this lint doesn't play nice with LaTeX in doc comments.
doc-markdown = "allow"

[dependencies]
nalgebra = { version = "0.32.6" }
